# robotiq_gripper_ros2

./: README.md
robotiq_gripper_controller/: CMakeLists.txt  package.xml
robotiq_gripper_controller/src/: main_node.cpp
robotiq_gripper_description/: CMakeLists.txt  package.xml
robotiq_gripper_description/launch/: view_gripper.launch.py
robotiq_gripper_description/urdf/: robotiq_2f_85_macro.urdf.xacro
robotiq_gripper_interfaces/: CMakeLists.txt  package.xml
